--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,56 @@
     ViewData["Title"] = "One Vision";
 }
 
+<!--STYLES-->
+<style>
+    .slide{
+        position: relative;
+        box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+        margin-top: 26px;
+    }
+    .slide-inner{
+        position:relative;
+        overflow:hidden;
+    }
+    .img-carousel {
+        width: 100%;
+        height: 70vh; /* Altura adaptable a la pantalla */
+        object-fit: cover; /* o "contain" si prefieres mostrar todo sin recorte */
+        border-radius: 10px;
+    }
+</style>
+
+
 <div class="text-center">
     <h1>Bienvenidos</h1>
+</div>
+
+<div id="carouselFotos" class="carousel slide" data-bs-ride="carousel">
+
+    <div class="carousel-inner text-center">
+        
+        <div class="carousel-item">
+            <img src="~/css/1.png" class="d-block mx-auto img-carousel" alt="img1">
+        </div>
+        <div class="carousel-item">
+            <img src="~/css/2.png" class="d-block mx-auto img-carousel" alt="img2">
+        </div>
+        <div class="carousel-item">
+            <img src="~/css/3.png" class="d-block mx-auto img-carousel" alt="img3">
+        </div>
+        <div class="carousel-item">
+            <img src="~/css/4.png" class="d-block mx-auto img-carousel" alt="img4">
+        </div>
+        <div class="carousel-item active">
+            <img src="~/css/5.png" class="d-block mx-auto img-carousel" alt="Logo">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselFotos" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+        <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselFotos" data-bs-slie="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
 </div>
