--- a/Views/Historial/Create.cshtml
+++ b/Views/Historial/Create.cshtml
@@ -12,12 +12,6 @@
 
         <div class="row g-3">
             <div class="col-md-6">
-                <label asp-for="ID" class="form-label"></label>
-                <input asp-for="ID" class="form-control" />
-                <span asp-validation-for="ID" class="text-danger"></span>
-            </div>
-
-            <div class="col-md-6">
                 <label asp-for="Nombre" class="form-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
@@ -58,3 +52,8 @@
         </div>
     </form>
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
