--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,6 +55,10 @@
                 <a asp-controller="Usuarios" asp-action="ConfigUsuario" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-gear me-2"></i> Configuración
                 </a>
+                <a asp-controller="ControlVentas" asp-action="Index" class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center hover-effect">
+                   <i class="bi bi-cash-coin me-2"></i> Control de Ventas
+                 </a>
+
             }
         </div>
     </nav>
