--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -65,6 +65,13 @@
                     <div class="text-center mt-3">
                         <p>¿No tienes una cuenta? <a asp-action="Create" class="btn btn-link">Registrarse</a></p>
                     </div>
+                    <div class="text-center mt-3">
+                        <p>
+                            ¿Olvidaste contraseña?
+                            <a asp-action="RecoverPassword" asp-controller="Usuarios" class="btn btn-link">Recuperar contraseña</a>
+                        </p>
+                    </div>
+
                 </div>
             </div>
         </div>
